--- a/server/nginx/config/nginx.conf
+++ b/server/nginx/config/nginx.conf
@@ -8,8 +8,9 @@ worker_processes auto;
 
 #pid        logs/nginx.pid;
 
-# njs additions
+## Additional modules
 load_module modules/ngx_http_js_module.so;
+load_module modules/ngx_http_echo_module.so;
 
 events {
     worker_connections 4000;
@@ -20,9 +21,10 @@ events {
 
 http {
     # njs additions
-    js_import ../cmcd_njs.js;
-    js_set $testRate cmcd_njs.getTestRate;
-    js_set $bufferBasedRate cmcd_njs.getBufferBasedRate;
+    js_import ../cmsd_njs.js;
+    js_set $bufferBasedDelay cmsd_njs.getBufferBasedDelay;
+    #js_var $latestDelay 0;
+    #js_var $latestDelayTimestamp 0;
 
     include       mime.types;
     default_type  application/octet-stream;
@@ -54,42 +56,28 @@ http {
             index  index.html index.htm;
         }
 
-        # CMCD-DASH additions
+        # CMSD-DASH additions
         #
         # njs
         location /media/vod {
             subrequest_output_buffer_size 10m;
-            # root <PATH_TO_CMCD-DASH>/cmcd-server/nginx;
-            root /home/nustreaming/CMCD-DASH/cmcd-server/nginx;
+            # root <PATH_TO_CMSD-DASH>/server/nginx;
+            root /home/nustreaming/CMSD-DASH/server/nginx;
 
             # Enable CORS for simple requests
             if ($request_method ~* "(GET|POST)") {
                 add_header "Access-Control-Allow-Origin"  *;
             }
         }
-        location /cmcd-njs/testProcessQuery {
-            js_content cmcd_njs.testProcessQuery;
-        }
-        location /cmcd-njs/testRateControl {
-            js_content cmcd_njs.testRateControl;
-            limit_rate $testRate;
-        }
-        location /cmcd-njs/bufferBasedRateControl {
-            js_content cmcd_njs.bufferBasedRateControl;
-            limit_rate $bufferBasedRate;
+        location /cmsd-njs/bufferBasedResponseDelay {
+            js_content cmsd_njs.getResourceUsingSubrequestBBRD;
+            echo_sleep $bufferBasedDelay;
 
             # Enable CORS for simple requests
             if ($request_method ~* "(GET|POST)") {
                 add_header "Access-Control-Allow-Origin"  *;
             }
         }
-
-        # reverse proxy to dash-server
-        # location /cmcd-server/ {
-        #     proxy_pass http://localhost:8081/;
-        # }
-        # end
-        # CMCD-DASH additions
 
         #error_page  404              /404.html;
 
