Fixed test code; Fixed echo_sleep and echo_exec on nginx

--- a/server/nginx/config/nginx.conf
+++ b/server/nginx/config/nginx.conf
@@ -70,8 +70,11 @@ http {
             }
         }
         location /cmsd-njs/bufferBasedResponseDelay {
-            js_content cmsd_njs.getResourceUsingSubrequestBBRD;
             echo_sleep $bufferBasedDelay;
+            echo_exec /cmsd-njs/getResourceUsingSubrequestBBRD $echo_client_request_headers;
+        }
+        location /cmsd-njs/getResourceUsingSubrequestBBRD {
+            js_content cmsd_njs.getResourceUsingSubrequestBBRD;
 
             # Enable CORS for simple requests
             if ($request_method ~* "(GET|POST)") {
